# flame

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
cmake/templates/: flameConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/flame/: flame.cc  flame.h  types.h
src/flame/optimizers/: nltgv2_l1_graph_regularizer.cc  nltgv2_l1_graph_regularizer.h
src/flame/utils/: assert.h  keyframe_selector.cc  load_tracker.h
test/: CMakeLists.txt
test/stereo/: epipolar_geometry_test.cc
test/utils/: image_utils_test.cc  load_tracker_test.cc  rasterization_test.cc  stats_tracker_test.cc  visualization_test.cc
